--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+.app {
+  height: 100vh;
+  background-image: url('./assets/marble.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  margin: 0 24px;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  max-width: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.maintenanceText {
+  position: absolute;
+  text-align: center;
+  font-size: 1.5em;
+  padding: 1em;
+  bottom: 0;
+}
+
+@media(max-width: 930px) {
+  .maintenanceText {
+    font-size: 1.25em;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media(max-width: 400px) {
+  .maintenanceText {
+    font-size: 1em;
   }
 }
