--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Livvic:400');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  height: 100vh;
+}
+
+h1, p, li, a, label, input, button {
+  color: #2f2f2f;
+  font-family: 'Livvic', sans-serif;
+}
+
+img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
 }
